k8s/labs/day42/ingress-routing/api-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: api-service

spec:
  selector:
    app: api-demo

  ports:
  - port: 80
    targetPort: 80
