k8s/labs/day42/ingress-routing/web-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: web-service

spec:
  selector:
    app: web-demo

  ports:
  - port: 80
    targetPort: 80
