k8s/labs/day42/ingress-routing/host-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: host-routing-demo

spec:

  ingressClassName: nginx

  rules:

  - host: web.local

    http:

      paths:

      - path: /

        pathType: Prefix

        backend:

          service:

            name: web-service

            port:

              number: 80


  - host: api.local

    http:

      paths:

      - path: /

        pathType: Prefix

        backend:

          service:

            name: api-service

            port:

              number: 80
