k8s/labs/day42/ingress-routing/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: path-routing-demo

  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /  
    
spec:

  ingressClassName: nginx

  rules:

  - host: app.local

    http:

      paths:

      - path: /web

        pathType: Prefix

        backend:

          service:

            name: web-service

            port:

              number: 80


      - path: /api

        pathType: Prefix

        backend:

          service:

            name: api-service

            port:

              number: 80
