k8s/labs/day42/ingress-routing/tls-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: tls-demo-ingress

spec:

  ingressClassName: nginx


  tls:

  - hosts:
    - app.local

    secretName: app-tls


  rules:

  - host: app.local

    http:

      paths:

      - path: /

        pathType: Prefix

        backend:

          service:

            name: web-service

            port:

              number: 80
